fixed the interest button active issue on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,11 @@ body {
   scroll-behavior: smooth;
 }
 
+.interest_button {
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
+}
+
 .footer_copyright {
   background-color: rgba(84, 101, 189, 0.16);
   color: white;
